--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -18,10 +18,9 @@ jobs:
         with:
           p12-file-base64: ${{ secrets.CODESIGN_CERTIFICATE }}
           p12-password: ${{ secrets.CODESIGN_CERTIFICATE_PASSWORD }}
-      - name: Install Qt6
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: '6.2.1'
+      - name: Install wxwidgets using brew
+        run: |
+          brew install wxwidgets
       - name: Install depedencies using conan
         run: |
           pip3 install wheel setuptools
