--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - '*'
 
+env:
+  BUILD_TYPE: Release
+  WXVERSION: 3.1.4
+  cache-name: cache-wxWidgets
+
 jobs:
   build:
     runs-on: macos-10.15
@@ -18,9 +23,47 @@ jobs:
         with:
           p12-file-base64: ${{ secrets.CODESIGN_CERTIFICATE }}
           p12-password: ${{ secrets.CODESIGN_CERTIFICATE_PASSWORD }}
-      - name: Install wxwidgets using brew
+      - name: Install wxwidget dependencies (for int18)
         run: |
-          brew install wxwidgets
+          export PATH=$PATH:/usr/local/opt/gettext/bin
+          export HOMEBREW_NO_AUTO_UPDATE=1
+          set -e
+          brew install gettext
+          set +e
+      - name: Cache wxWidgets
+        uses: actions/cache@v2
+        with:
+          path: |
+            wxWidgets_src-${{env.WXVERSION}}
+            wxWidgets_build-${{env.WXVERSION}}
+          key: ${{ runner.os }}-build-${{env.github_ref}}-${{ env.cache-name }}-4
+      - name: Download wxWidgets
+        run: |
+          if test -d wxWidgets_src-${{env.WXVERSION}}; then
+              echo "exWidgets already downloaded"
+          else
+              wget https://github.com/wxWidgets/wxWidgets/releases/download/v${{env.WXVERSION}}/wxWidgets-${{env.WXVERSION}}.zip
+              mkdir wxWidgets_src-${{env.WXVERSION}}
+              cd wxWidgets_src-${{env.WXVERSION}}
+              unzip ../wxWidgets-${{env.WXVERSION}}.zip
+              cd ..
+          fi
+      - name: Compile wxWidgets
+        run: |
+          if test -d wxWidgets_build-${{env.WXVERSION}}; then
+              echo "wxWidgets already compiled"
+          else
+              mkdir wxWidgets_build-${{env.WXVERSION}}
+              cd wxWidgets_build-${{env.WXVERSION}}
+              cmake ../wxWidgets_src-${{env.WXVERSION}} -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
+              cmake --build .
+              cd ..
+          fi
+      - name: Install wxWidgets
+        run: |
+          cd wxWidgets_build-${{env.WXVERSION}}
+          sudo cmake --install .
+          cd ..
       - name: Install depedencies using conan
         run: |
           pip3 install wheel setuptools
