--- a/.github/workflows/release-ubuntu.yml
+++ b/.github/workflows/release-ubuntu.yml
@@ -19,14 +19,8 @@ jobs:
         run: |
           pip3 install wheel setuptools
           pip3 install conan
-      - name: Install apt packages for Qt6
-        run: sudo apt-get -y install build-essential libgl1-mesa-dev libxkbcommon-dev libfontconfig-dev # libglu1-mesa-dev libvulkan-dev libx11-xcb-dev
-      - name: Install Qt6
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: '6.2.1'
       - name: Install linux related project dependencies using apt
-        run: sudo apt-get -y install libssl-dev libsrtp2-dev libsecret-1-dev cmake pkg-config libasound2-dev libjack-dev
+        run: sudo apt-get -y install build-essential libwxgtk3.0-gtk3-dev gettext libssl-dev libsrtp2-dev libsecret-1-dev cmake pkg-config libasound2-dev libjack-dev
       - name: Install general project dependencies using Conan package manager
         run: |
           conan profile new default --detect
