Added codesigning again

--- a/.github/workflows/nightly-macos.yml
+++ b/.github/workflows/nightly-macos.yml
@@ -80,6 +80,22 @@ jobs:
         run: cpack --config build/CPackConfigApp.cmake -B build
       - name: Bundle Service
         run: cpack --config build/CPackConfigService.cmake -B build
+
+      - name: Sign bundle
+        run: |
+          codesign --force --options runtime --sign "Developer ID Application: Tobias Hegemann (JH3275598G)" build/digital-stage-connector-0.0.6-Darwin.dmg
+      - name: Notarize App bundle
+        uses: devbotsxyz/xcode-notarize@v1
+        with:
+          product-path: "build/digital-stage-connector-0.0.6-Darwin.dmg"
+          appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
+          appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
+          primary-bundle-id: de.tobiashegemann.digital-stage.app
+      - name: Staple App bundle
+        uses: devbotsxyz/xcode-staple@v1
+        with:
+          product-path: "build/digital-stage-connector-0.0.6-Darwin.dmg"
+
       - name: Publish bundle
         uses: ncipollo/release-action@v1
         with:
