--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -80,18 +80,18 @@ jobs:
         run: cpack --config build/CPackConfigService.cmake -B build
       - name: Sign bundle
         run:  |
-          codesign --force --options runtime --sign "Developer ID Application: Tobias Hegemann (JH3275598G)" build/Install-Connector.dmg
+          codesign --force --options runtime --sign "Developer ID Application: Tobias Hegemann (JH3275598G)" build/digital-stage-connector*.dmg
       - name: Notarize App bundle
         uses: devbotsxyz/xcode-notarize@v1
         with:
-          product-path: "build/Install-Connector.dmg"
+          product-path: "build/digital-stage-connector-0.0.6-Darwin.dmg"
           appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
           appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
           primary-bundle-id: de.tobiashegemann.digital-stage.app
       - name: Staple App bundle
         uses: devbotsxyz/xcode-staple@v1
         with:
-          product-path: "build/Install-Connector.dmg"
+          product-path: "build/digital-stage-connector-0.0.6-Darwin.dmg"
       - name: Publish bundle
         uses: ncipollo/release-action@v1
         with:
