Updated nighly scritps

--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -45,14 +45,14 @@ jobs:
       - name: Notarize App bundle
         uses: devbotsxyz/xcode-notarize@v1
         with:
-          product-path: "build/digital-stage-connector-0.0.6-Darwin.dmg"
+          product-path: "build/digital-stage-connector-*.dmg"
           appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
           appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
           primary-bundle-id: de.tobiashegemann.digital-stage.app
       - name: Staple App bundle
         uses: devbotsxyz/xcode-staple@v1
         with:
-          product-path: "build/digital-stage-connector-0.0.6-Darwin.dmg"
+          product-path: "build/digital-stage-connector-*.dmg"
       - name: Publish bundle
         uses: ncipollo/release-action@v1
         with:
