--- a/.github/workflows/nightly-macos.yml
+++ b/.github/workflows/nightly-macos.yml
@@ -20,8 +20,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Get current version (without leading v)
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:11})
+      - name: Get version
+        run: |
+          FULL_VERSION=$(git describe --tags --abbrev=0)
+          echo '::set-output name=VERSION::$(echo ${FULL_VERSION:1})'
+        id: get-version
       - name: Install codesign certificates
         uses: apple-actions/import-codesign-certs@v1
         with:
@@ -36,7 +39,7 @@ jobs:
           conan install -if build --build missing .
       - name: Configure CMake
         run: |
-          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DCODESIGN_CERTIFICATE_NAME="Developer ID Application: Tobias Hegemann (JH3275598G)"
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DMACOSX_DEPLOYMENT_TARGET=10.14 -DCODESIGN_CERTIFICATE_NAME="Developer ID Application: Tobias Hegemann (JH3275598G)"
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle App
@@ -46,8 +49,8 @@ jobs:
 
       - name: Rename to nighly
         run: |
-          mv build/digital-stage-connector-${RELEASE_VERSION}-Darwin-app.dmg build/digital-stage-connector-nightly-Darwin-app.dmg
-          mv build/digital-stage-connector-${RELEASE_VERSION}-Darwin-service.dmg build/digital-stage-connector-nightly-Darwin-service.dmg
+          mv build/digital-stage-connector-${{ steps.get-version.outputs.VERSION }}-Darwin-app.dmg build/digital-stage-connector-nightly-Darwin-app.dmg
+          mv build/digital-stage-connector-${{ steps.get-version.outputs.VERSION }}-Darwin-service.dmg build/digital-stage-connector-nightly-Darwin-service.dmg
       - name: Sign bundle
         run: |
           codesign --force --options runtime --sign "Developer ID Application: Tobias Hegemann (JH3275598G)" build/digital-stage-connector-nightly-Darwin-app.dmg
