--- a/.github/workflows/nightly-macos.yml
+++ b/.github/workflows/nightly-macos.yml
@@ -9,8 +9,6 @@ on:
 
 env:
   BUILD_TYPE: Release
-  WXVERSION: 3.1.4
-  cache-name: cache-wxWidgets
 
 jobs:
   build:
@@ -35,7 +33,7 @@ jobs:
           conan install -if build --build missing .
       - name: Configure CMake
         run: |
-          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DMACOSX_DEPLOYMENT_TARGET=10.14 -DCODESIGN_CERTIFICATE_NAME="Developer ID Application: Tobias Hegemann (JH3275598G)"
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13 -DCODESIGN_CERTIFICATE_NAME="Developer ID Application: Tobias Hegemann (JH3275598G)"
       - name: Build with CMake
         run: cmake --build build --config Release
       - name: Bundle App
@@ -45,8 +43,8 @@ jobs:
 
       - name: Rename to nighly
         run: |
-          mv build/digital-stage-connector-${{ steps.get_version.outputs.version-without-v }}-Darwin-app.dmg build/digital-stage-connector-nightly-Darwin-app.dmg
-          mv build/digital-stage-connector-${{ steps.get_version.outputs.version-without-v }}-Darwin-service.dmg build/digital-stage-connector-nightly-Darwin-service.dmg
+          mv build/digital-stage-connector-*-Darwin-app.dmg build/digital-stage-connector-nightly-Darwin-app.dmg
+          mv build/digital-stage-connector-*-Darwin-service.dmg build/digital-stage-connector-nightly-Darwin-service.dmg
       - name: Sign bundle
         run: |
           codesign --force --options runtime --sign "Developer ID Application: Tobias Hegemann (JH3275598G)" build/digital-stage-connector-nightly-Darwin-app.dmg
