--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Publish bundle
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/*.dmg,build/*.zip"
+          artifacts: "build/*.dmg,build/*.pkg"
           bodyFile: "HOWTO.md"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
