--- a/App/MacOSXBundleInfo.plist.in
+++ b/App/MacOSXBundleInfo.plist.in
@@ -7,7 +7,9 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>de-DE</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>This app requires audio input to apply to stages.</string>
+    <string>Diese Anwendung benötigt Zugriff auf Dein Audiogerät.</string>
+    <key>com.apple.security.device.audio-input</key>
+    <true/>
 	<key>CFBundleExecutable</key>
 	<string>${MACOSX_BUNDLE_EXECUTABLE_NAME}</string>
 	<key>CFBundleGetInfoString</key>
@@ -18,8 +20,6 @@
 	<string>${MACOSX_BUNDLE_GUI_IDENTIFIER}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleLongVersionString</key>
-	<string>${MACOSX_BUNDLE_LONG_VERSION_STRING}</string>
 	<key>CFBundleName</key>
 	<string>${MACOSX_BUNDLE_BUNDLE_NAME}</string>
 	<key>CFBundlePackageType</key>
@@ -34,5 +34,9 @@
 	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>${MACOSX_BUNDLE_COPYRIGHT}</string>
+	<key>NSHighResolutionCapable</key>
+	<true/>
+    <key>NSPrincipalClass</key>
+    <string>NSApplication</string>
 </dict>
 </plist>
