Improved icon handling

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -54,12 +54,9 @@ endif (NOT TARGET datachannel)
 if (NOT TARGET plog)
     find_package(plog REQUIRED)
 endif ()
-if (NOT TARGET cpprestsdk)
-    find_package(cpprestsdk REQUIRED)
-endif (NOT TARGET cpprestsdk)
-if (NOT TARGET OpenSSL)
-    find_package(OpenSSL REQUIRED)
-endif (NOT TARGET OpenSSL)
+#if (NOT TARGET OpenSSL)
+#    find_package(OpenSSL REQUIRED)
+#endif (NOT TARGET OpenSSL)
 
 
 #################################################
@@ -150,8 +147,7 @@ cmrc_add_resource_library(${PROJECT_NAME}-resources
 target_link_libraries(${PROJECT_NAME}
         PUBLIC
         DigitalStage::ApiStatic
-        cpprestsdk::cpprest
-        OpenSSL::Crypto
+        #OpenSSL::Crypto
         3dtiAudioToolkitStatic
         plog
         Threads::Threads
