--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -41,10 +41,6 @@ endif (NOT TARGET DigitalStageAuth)
 if (NOT TARGET udp-discovery)
     find_package(udp-discovery REQUIRED)
 endif (NOT TARGET udp-discovery)
-# pLog -Logger
-if (NOT TARGET plog)
-    find_package(plog REQUIRED)
-endif ()
 if (NOT TARGET wxWidgets)
     set(wxBUILD_SHARED OFF)
     set(wxUSE_STL ON)
@@ -182,7 +178,7 @@ elseif (APPLE)
             MACOSX_BUNDLE_SHORT_VERSION_STRING ${CMAKE_PROJECT_VERSION}
             MACOSX_BUNDLE_LONG_VERSION_STRING ${CMAKE_PROJECT_VERSION}
             MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/MacOSXBundleInfo.plist.in
-            MACOSX_BUNDLE_INFO_STRING ${PROJECT_DESCRIPTION}
+            #MACOSX_BUNDLE_INFO_STRING ${PROJECT_DESCRIPTION}
             MACOSX_BUNDLE_ICON_FILE appicon.icns)
     # First use macdeployqt to bundle the qt libs, but do NOT sign yet
     if (CODESIGN_CERTIFICATE_NAME)
