--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -48,9 +48,16 @@ find_package(Threads REQUIRED)
 if (NOT TARGET DigitalStageApi)
     find_package(DigitalStage REQUIRED)
 endif (NOT TARGET DigitalStageApi)
-if (NOT TARGET datachannel)
-    find_package(LibDataChannel REQUIRED)
-endif (NOT TARGET datachannel)
+set(NO_WEBSOCKET ON CACHE BOOL "" FORCE)
+set(NO_MEDIA ON CACHE BOOL "" FORCE)
+set(NO_TESTS ON CACHE BOOL "" FORCE)
+set(NO_EXAMPLES ON CACHE BOOL "" FORCE)
+if (UNIX AND NOT APPLE)
+    set(USE_SYSTEM_SRTP ON CACHE BOOL "" FORCE)
+    set(USE_GNUTLS OFF CACHE BOOL "" FORCE)
+endif ()
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/deps/libdatachannel EXCLUDE_FROM_ALL)
+
 if (NOT TARGET plog)
     find_package(plog REQUIRED)
 endif ()
