--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -170,17 +170,17 @@ elseif (APPLE)
     set(CMAKE_MACOSX_RPATH ON)
     set_target_properties(${target}
             PROPERTIES
-            MACOSX_RPATH TRUE
             MACOSX_BUNDLE TRUE
             MACOSX_BUNDLE_GUI_IDENTIFIER de.tobiashegemann.digital-stage.app
             MACOSX_BUNDLE_BUNDLE_NAME ${BUNDLE_NAME}
-            MACOSX_BUNDLE_COPYRIGHT ${PROJECT_COPYRIGHT}
+            MACOSX_BUNDLE_COPYRIGHT "Copyright (c) 2021 Tobias Hegemann"
             MACOSX_BUNDLE_BUNDLE_VERSION ${CMAKE_PROJECT_VERSION}
             MACOSX_BUNDLE_SHORT_VERSION_STRING ${CMAKE_PROJECT_VERSION}
             MACOSX_BUNDLE_LONG_VERSION_STRING ${CMAKE_PROJECT_VERSION}
             MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/MacOSXBundleInfo.plist.in
-            #MACOSX_BUNDLE_INFO_STRING ${PROJECT_DESCRIPTION}
-            MACOSX_BUNDLE_ICON_FILE appicon.icns)
+            MACOSX_BUNDLE_INFO_STRING "Online zusammen proben und auffuehren"
+            MACOSX_BUNDLE_ICON_FILE appicon.icns
+            )
     # First use macdeployqt to bundle the qt libs, but do NOT sign yet
     if (CODESIGN_CERTIFICATE_NAME)
         # Now codesign
