--- a/Service/CMakeLists.txt
+++ b/Service/CMakeLists.txt
@@ -121,6 +121,7 @@ if (WIN32)
     install(TARGETS ${PROJECT_NAME}
             RUNTIME DESTINATION . COMPONENT ${PROJECT_NAME}
             )
+    set(CPACK_PACKAGE_FILE_NAME digital-stage-connector-service-win-${CMAKE_SYSTEM_PROCESSOR})
     include(InstallRequiredSystemLibraries)
     set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
     set(CPACK_GENERATOR "ZIP")
@@ -137,6 +138,7 @@ elseif (APPLE)
             execute_process(COMMAND codesign --options runtime --sign \"${CODESIGN_CERTIFICATE_NAME}\" \"$<TARGET_FILE:${PROJECT_NAME}>\")"
                 COMPONENT ${PROJECT_NAME})
     endif (CODESIGN_CERTIFICATE_NAME)
+    set(CPACK_PACKAGE_FILE_NAME digital-stage-connector-service-macos-${CMAKE_SYSTEM_PROCESSOR})
     set(CPACK_PACKAGING_INSTALL_PREFIX /usr/local)
     set(CPACK_GENERATOR "productbuild")
 elseif (UNIX)
@@ -157,6 +159,7 @@ elseif (UNIX)
     set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
     set(CPACK_DEB_COMPONENT_INSTALL YES)
     set(CPACK_GENERATOR "DEB")
+    #set(CPACK_PACKAGE_FILE_NAME digital-stage-connector-service-linux-${CMAKE_SYSTEM_PROCESSOR})
 endif ()
 if (CMAKE_BUILD_TYPE_UPPER MATCHES "^(DEBUG|RELWITHDEBINFO)$")
     set(CPACK_STRIP_FILES FALSE)
@@ -164,4 +167,5 @@ else ()
     set(CPACK_STRIP_FILES TRUE)
 endif ()
 set(CPACK_COMPONENTS_ALL ${PROJECT_NAME})
+set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_SYSTEM_NAME})
 include(CPack)
